// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectItem /> renders properly 1`] = `
<div>
  <li
    class="jsx-235796002"
  >
    <span
      style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
    >
      <span
        style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
      >
        <img
          alt=""
          aria-hidden="true"
          src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
          style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
        />
      </span>
      <img
        alt="tjela logo"
        data-nimg="intrinsic"
        decoding="async"
        src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
        srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
      />
    </span>
    <div
      class="jsx-235796002 backface"
    >
      <a
        class="jsx-235796002 brand link fontXS"
        href="https://www.instagram.com/tudonatjela/"
        rel="noreferrer"
        target="_blank"
      >
        @tudonatjela
      </a>
      <p
        class="jsx-235796002 description fontS"
      >
        Gestão de Redes Sociais e Criação de Conteúdo
      </p>
      <p
        class="jsx-235796002 date fontXS"
      >
        2020
         - Presente
      </p>
      <small
        class="jsx-235796002 fontXS"
      >
        * 
        em dupla com Sofia Ferreirinho
      </small>
    </div>
  </li>
</div>
`;

exports[`<ProjectItem /> renders properly in English 1`] = `
<div>
  <li
    class="jsx-235796002"
  >
    <span
      style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
    >
      <span
        style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
      >
        <img
          alt=""
          aria-hidden="true"
          src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
          style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
        />
      </span>
      <img
        alt="tjela logo"
        data-nimg="intrinsic"
        decoding="async"
        src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
        srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
      />
    </span>
    <div
      class="jsx-235796002 backface"
    >
      <a
        class="jsx-235796002 brand link fontXS"
        href="https://www.instagram.com/tudonatjela/"
        rel="noreferrer"
        target="_blank"
      >
        @tudonatjela
      </a>
      <p
        class="jsx-235796002 description fontS"
      >
        Social Media Management and Content Creation
      </p>
      <p
        class="jsx-235796002 date fontXS"
      >
        2020
         - Present
      </p>
      <small
        class="jsx-235796002 fontXS"
      >
        * 
        in partnership with Sofia Ferreirinho
      </small>
    </div>
  </li>
</div>
`;

exports[`<ProjectItem /> renders properly in mobile 1`] = `
<div>
  <div
    class="jsx-235796002 carouselItem grid"
    data-testid="projectItem_touch_div_tjela logo"
    data-times-touched="0"
  >
    <span
      style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
    >
      <span
        style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
      >
        <img
          alt=""
          aria-hidden="true"
          src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
          style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
        />
      </span>
      <img
        alt="tjela logo"
        data-nimg="intrinsic"
        decoding="async"
        src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
        srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
      />
    </span>
    <div
      class="jsx-235796002 backface"
    >
      <a
        class="jsx-235796002 brand link fontXS"
        href="https://www.instagram.com/tudonatjela/"
        rel="noreferrer"
        target="_blank"
      >
        @tudonatjela
      </a>
      <p
        class="jsx-235796002 description fontS"
      >
        Gestão de Redes Sociais e Criação de Conteúdo
      </p>
      <p
        class="jsx-235796002 date fontXS"
      >
        2020
         - Presente
      </p>
      <small
        class="jsx-235796002 fontXS"
      >
        * 
        em dupla com Sofia Ferreirinho
      </small>
    </div>
  </div>
</div>
`;

exports[`<ProjectItem /> renders properly when device is touch 1`] = `
<div>
  <div
    class="jsx-235796002 carouselItem touch grid"
    data-testid="projectItem_touch_div_tjela logo"
    data-times-touched="1"
  >
    <span
      style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
    >
      <span
        style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
      >
        <img
          alt=""
          aria-hidden="true"
          src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
          style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
        />
      </span>
      <img
        alt="tjela logo"
        data-nimg="intrinsic"
        decoding="async"
        src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
        srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
      />
    </span>
    <div
      class="jsx-235796002 backface"
    >
      <a
        class="jsx-235796002 brand link fontXS"
        href="https://www.instagram.com/tudonatjela/"
        rel="noreferrer"
        target="_blank"
      >
        @tudonatjela
      </a>
      <p
        class="jsx-235796002 description fontS"
      >
        Gestão de Redes Sociais e Criação de Conteúdo
      </p>
      <p
        class="jsx-235796002 date fontXS"
      >
        2020
         - Presente
      </p>
      <small
        class="jsx-235796002 fontXS"
      >
        * 
        em dupla com Sofia Ferreirinho
      </small>
    </div>
  </div>
</div>
`;

exports[`<ProjectItem /> renders properly with isGrid being false 1`] = `
<div>
  <div
    class="jsx-235796002 carouselItem"
    data-testid="projectItem_touch_div_tjela logo"
    data-times-touched="0"
  >
    <span
      style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
    >
      <span
        style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
      >
        <img
          alt=""
          aria-hidden="true"
          src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
          style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
        />
      </span>
      <img
        alt="tjela logo"
        data-nimg="intrinsic"
        decoding="async"
        src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
        srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
      />
    </span>
    <div
      class="jsx-235796002 backface"
    >
      <a
        class="jsx-235796002 brand link fontXS"
        href="https://www.instagram.com/tudonatjela/"
        rel="noreferrer"
        target="_blank"
      >
        @tudonatjela
      </a>
      <p
        class="jsx-235796002 description fontS"
      >
        Gestão de Redes Sociais e Criação de Conteúdo
      </p>
      <p
        class="jsx-235796002 date fontXS"
      >
        2020
         - Presente
      </p>
      <small
        class="jsx-235796002 fontXS"
      >
        * 
        em dupla com Sofia Ferreirinho
      </small>
    </div>
  </div>
</div>
`;

exports[`<ProjectItem /> renders properly with preloadImage being false 1`] = `
<div>
  <li
    class="jsx-235796002"
  >
    <span
      style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
    >
      <span
        style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
      >
        <img
          alt=""
          aria-hidden="true"
          src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
          style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
        />
      </span>
      <img
        alt="tjela logo"
        data-nimg="intrinsic"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
      />
      <noscript />
    </span>
    <div
      class="jsx-235796002 backface"
    >
      <a
        class="jsx-235796002 brand link fontXS"
        href="https://www.instagram.com/tudonatjela/"
        rel="noreferrer"
        target="_blank"
      >
        @tudonatjela
      </a>
      <p
        class="jsx-235796002 description fontS"
      >
        Gestão de Redes Sociais e Criação de Conteúdo
      </p>
      <p
        class="jsx-235796002 date fontXS"
      >
        2020
         - Presente
      </p>
      <small
        class="jsx-235796002 fontXS"
      >
        * 
        em dupla com Sofia Ferreirinho
      </small>
    </div>
  </li>
</div>
`;
